--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -68,7 +68,7 @@ p {
     margin-left: 25px;
 }
 
-article {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -101,7 +101,7 @@ aside img {
     max-width: 150px;
 }
 
-article section {
+main section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -110,11 +110,11 @@ article section {
     color: #ffffff;
 }
 
-article img {
+main img {
     max-height: 200px;
 }
 
-article h2 {
+main h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
