--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -145,6 +145,7 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    display: none;
 }
 
 /* sets the font size of the footers h2 text */
